import testServer from "../testUtils/testServer";
import Database from "../testUtils/databaseCreator";
import { gql } from "apollo-server";
const { RegistroAPI } = require("../datasources/registroAPI");

describe("registro", () => {
  const registroAPI = new RegistroAPI();
  const applicant = {
    codigo: "1234567890",
    nombre: "Benito Antonio",
    apellido_paterno: "Martinez",
    apellido_materno: "Ocasio",
    genero: "M",
    ciclo: "2021A",
    carrera: "Agronegocios",
    telefono: "3411234567",
    email: "bad@bunny.pr",
    externo: true,
    nivel: "4",
    curso: "en"
  };
  const schedulesLevel4 = {
    "E4-1": {
      teacher: "GONZALO ROCHA",
      group: "E4-1",
      sesiones: "HTTP://URL_AQUI",
      chat: "HTTP://URL_AQUI",
      classroom: "HTTP://URL_AQUI"
    }
  };

  it("gets registering levels", async () => {
    const db = {
      prod: {
        registeringLevels: {
          en: ["1", "2"]
        }
      }
    };
    const GET_LEVELS_REGISTERING = gql`
      query getLevelsRegistering($course: String!) {
        english: registeringLevels(course: $course)
      }
    `;
    const variables = { course: "en" };
    const database = new Database(db);
    registroAPI.get = jest.fn(url => database.get(url));
    const dataSources = () => {
      return { registroAPI };
    };
    const context = () => {
      return { enviroment: "prod" };
    };
    const { query } = testServer(dataSources, context);
    const res = await query({
      query: GET_LEVELS_REGISTERING,
      variables
    });
    expect(registroAPI.get).toHaveBeenCalledTimes(1);
    expect(registroAPI.get).toHaveBeenCalledWith(
      "prod/registeringLevels/en.json"
    );
    expect(res.errors).toBe(undefined);
    expect(res.data).toMatchSnapshot();
  });

  it("gets an applicant who isn't registered", async () => {
    const db = {
      prod: {
        applicants: {
          "1234567890": applicant
        },
        registeringLevels: { en: ["4"] },
        schedules: {
          en: {
            level4: schedulesLevel4
          }
        }
      }
    };
    const GET_APPLICANT = gql`
      query info($codigo: ID!) {
        applicant(codigo: $codigo) {
          codigo
          nombre
          apellido_materno
          apellido_paterno
          genero
          carrera
          ciclo
          telefono
          email
          nivel
          curso
          externo
          registering
          registeredSchedule {
            teacher
            group
            classroom
            chat
            sesiones
          }
          schedules {
            teacher
            group
            serialized(options: { teacher: true, group: true })
          }
        }
      }
    `;
    const variables = {
      codigo: "1234567890"
    };
    const database = new Database(db);
    registroAPI.get = jest.fn(url => database.get(url));
    const dataSources = () => {
      return { registroAPI };
    };
    const context = () => {
      return { enviroment: "prod" };
    };
    const { query } = testServer(dataSources, context);
    const res = await query({
      query: GET_APPLICANT,
      variables
    });
    expect(registroAPI.get).toHaveBeenCalledTimes(5);
    expect(res.errors).toBe(undefined);
    expect(res.data).toMatchSnapshot();
    expect(registroAPI.get).not.toHaveBeenCalledWith(
      expect.stringMatching("undefined")
    );
  });
  it("gets an applicant who is already registered", async () => {
    const db = {
      prod: {
        alreadyRegistered: {
          "1234567890": "E4-1"
        },
        applicants: {
          "1234567890": applicant
        },
        registeringLevels: {
          en: ["3"]
        },
        schedules: {
          en: {
            level4: schedulesLevel4
          }
        }
      }
    };
    const GET_REGISTERED_APPLICANT = gql`
      query info($codigo: ID!) {
        applicant(codigo: $codigo) {
          codigo
          nombre
          email
          nivel
          registering
          registeredSchedule {
            teacher
            group
            classroom
            chat
            sesiones
          }
          schedules {
            teacher
            group
            serialized(options: { teacher: true, group: true })
          }
        }
      }
    `;
    const variables = {
      codigo: "1234567890"
    };

    const database = new Database(db);
    registroAPI.get = jest.fn(url => {
      return database.get(url);
    });
    const dataSources = () => {
      return { registroAPI };
    };
    const context = () => {
      return { enviroment: "prod" };
    };
    const { query } = testServer(dataSources, context);
    const res = await query({
      query: GET_REGISTERED_APPLICANT,
      variables
    });
    expect(res.data.applicant.registering).toBe(false);
    expect(res.data).toMatchSnapshot();
    expect(res.errors).toBe(undefined);
  });

  it("gets a schedule", async () => {
    const db = {
      prod: {
        schedules: {
          en: {
            level1: {
              "E1-1": {
                teacher: "GONZALO ROCHA",
                group: "E1-1",
                sesiones: "HTTP://URL_AQUI",
                chat: "HTTP://URL_AQUI",
                classroom: "HTTP://URL_AQUI"
              }
            }
          }
        }
      }
    };
    const GET_SCHEDULE = gql`
      query getSchedule($id: String!) {
        schedule(id: $id) {
          group
          teacher
          chat
          classroom
          sesiones
        }
      }
    `;
    const variables = {
      id: "E1-1"
    };
    const database = new Database(db);
    registroAPI.get = jest.fn(url => {
      return database.get(url);
    });
    const dataSources = () => {
      return { registroAPI };
    };
    const context = () => {
      return { enviroment: "prod" };
    };
    const { query } = testServer(dataSources, context);
    const res = await query({
      query: GET_SCHEDULE,
      variables
    });
    expect(res.data).toMatchSnapshot();
    expect(res.errors).toBe(undefined);
  });

  it("saves levels registering", async () => {
    const SAVE_LEVELS_REGISTERING = gql`
      mutation saveLevels($levels: [String]!, $course: String!) {
        saveRegisteringLevels(levels: $levels, course: $course)
      }
    `;

    const variables = {
      levels: ["1", "2"],
      course: "en"
    };
    registroAPI.put = jest.fn();

    const dataSources = () => {
      return { registroAPI };
    };
    const context = () => {
      return { enviroment: "prod" };
    };
    const { query } = testServer(dataSources, context);
    const res = await query({
      query: SAVE_LEVELS_REGISTERING,
      variables
    });
    expect(
      registroAPI.put
    ).toHaveBeenCalledWith("prod/registeringLevels/en.json", ["1", "2"]);
    expect(res.data).toMatchSnapshot();
    expect(res.errors).toBe(undefined);
  });
});
